--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
             <img src="pics/dom%20mic.png">
             <br> <img src="pics/hitmarker.png">
             <img src="pics/spoop.jpg">
-            <h2> this is dominique thiccass</h2>
+            <h2> this is dominique thiccass, the main doode</h2>
             <br> <img src="pics/danny.png">
             <img src="pics/group.jpg">
             <br> <img src="pics/benn.png">
             <img src="pics/niko%20pop.jpg">
+            <br><img src="pics/benny.jpg">
+            <img src="pics/paige.jpg">
+            <br> <img src="pics/harry.jpg">
+            <img src="pics/play.jpg">
+            <br> <img src="pics/pyramid.jpg">
+        
         <h3> these are the rest of the yagos</h3>
         <h4> cat fo dom</h4>
             <img src="pics/cat.jpg">
